syntax = "proto3";

option csharp_namespace = "Kaleido.Modules.Services.Grpc.Products";

package products;


service Products {
  rpc GetProduct(GetProductRequest) returns (GetProductResponse) {}
  rpc GetProducts(GetProductsRequest) returns (GetProductsResponse) {}
  rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse) {}
  rpc UpdateProduct(UpdateProductRequest) returns (UpdateProductResponse) {}
  rpc DeleteProduct(DeleteProductRequest) returns (DeleteProductResponse) {}
}

message GetProductRequest {
  string id = 1;
}

message GetProductResponse {
  Product product = 1;
}

message GetProductsRequest {
  int32 page = 1;
  int32 limit = 2;
}

message GetProductsResponse {
  repeated Product products = 1;
}

message CreateProductRequest {
  Product product = 1;
}

message CreateProductResponse {
  Product product = 1;
}

message UpdateProductRequest {
  string id = 1;
  Product product = 2;
}

message UpdateProductResponse {
  Product product = 1;
}

message DeleteProductRequest {
  string id = 1;
}

message DeleteProductResponse {
  string id = 1;
}

message Product {
  string id = 1;
  string name = 2;
  string description = 3;
  float price = 4;
}
